# py_codewars

./: .gitignore  README.md  pyproject.toml
py_codewars/: binary_arrays.py  friend_or_foe.py  string_ends_with.py
py_codewars/lv5/: extract_domain_from_url.py  moving_zeros_to_the_end.py  unique_in_order.py
py_codewars/lv6/: pandas_series_102.py
tests/: test_string_ends_with.py  test_unique_in_order.py
tests/test_lv5/: test_extract_domain_from_url.py  test_moving_zeros_to_the_end.py  test_string_ends_with.py  test_unique_in_order.py
tests/test_lv6/: test_pandas_series_102.py
