[tool.poetry]
name = "py-codewars"
version = "0.1.0"
description = ""
authors = ["Rafael Dias <rafaelagd@gmail.com>"]
readme = "README.md"
packages = [{include = "py_codewars"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
taskipy = "^1.10.4"
isort = "^5.12.0"
mypy = "^1.2.0"
black = "^23.3.0"
flake8 = "^6.0.0"


[tool.poetry.group.loc.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
types-requests = "^2.28.11.17"
ipykernel = "^6.22.0"
flake8 = "^6.0.0"
prospect = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
conde_style = "black . && isort . 120"
flake8 = "flake8 ."
mypy = "mypy . --ignore-missing-imports"
pre_test = "task conde_style && task flake8 && task mypy && prospect ."
test = "pytest -s -x --cov=py_codewars -vv"
post_test = "coverage html"
show_coverage = "firefox htmlcov/index.html"
simple_test = "pytest -s -x --cov=py_codewars -vv"
